Adjusted font size to resolve some color contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
 
 header,
